fix revenue and add notification, còn thiếu vài thông báo, fix icon

--- a/PPl3/Areas/User/Views/HomeUser/ChatUser.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/ChatUser.cshtml
@@ -42,7 +42,7 @@
                         <div class="sub_nav sub_nav_user js_sub_nav_user">
                             <ul class="menu_user js_menu_user">
                                 <li class=""><button>Messages</button></li>
-                                <li class=""><button>Notifications</button></li>
+                                <li class=""><a href="/user/homeuser/notification">Notifications</a></li>
                                 <li class=""><button>Trips</button></li>
                                 <li class=""><button>Wishlist</button></li>
                                 <li><a href="#">Manage listings</a></li>
