--- a/PPl3/Areas/User/Views/HomeUser/editProfile.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/editProfile.cshtml
@@ -136,7 +136,7 @@
                         </div>
                         <div class="nav_login">
                             <button class="js_menuUser_btn"><i class="fa-solid fa-bars"></i></button>
-                            @if (p_user.user_profile.FirstOrDefault() != null)
+                            @if (p_user.user_profile.FirstOrDefault() != null && p_user.user_profile.FirstOrDefault().user_avatar != null)
                             {
                                 <button class="js_menuUser_btn icon_style" style="background : url(@p_user.user_profile.FirstOrDefault().user_avatar) top center /cover no-repeat"></button>
                                 profile = p_user.user_profile.FirstOrDefault();
@@ -152,7 +152,7 @@
                         <div class="sub_nav sub_nav_user js_sub_nav_user">
                             <ul class="menu_user js_menu_user">
                                 <li class=""><button>Messages</button></li>
-                                <li class=""><button>Notifications</button></li>
+                                <li class=""><a href="/user/homeuser/notification">Notifications</a></li>
                                 <li class=""><a href="/user/homeuser/trip">Trip</a></li>
                                 <li class=""><a href="/user/homeuser/wishlist">Wishlist</a></li>
                                 <li><a href="Content">Manage listings</a></li>
