--- a/PPl3/Areas/User/Views/HomeUser/profile.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/profile.cshtml
@@ -72,7 +72,7 @@
                     <div class="sub_nav sub_nav_user js_sub_nav_user">
                         <ul class="menu_user js_menu_user">
                             <li class=""><button>Messages</button></li>
-                            <li class=""><button>Notifications</button></li>
+                            <li class=""><a href="/user/homeuser/notification">Notifications</a></li>
                             <li class=""><a href="/user/homeuser/trip">Trip</a></li>
                             <li class=""><a href="/user/homeuser/wishlist">Wishlist</a></li>
                             <li><a href="/host/homehost/listing">Manage listings</a></li>
