--- a/PPl3/Areas/Host/Views/HomeHost/Listing.cshtml
+++ b/PPl3/Areas/Host/Views/HomeHost/Listing.cshtml
@@ -20,7 +20,7 @@
     <link href="~/ExtraFiles/assets/css/gird.css" rel="stylesheet" />
     <link href="~/ExtraFiles/assets/css/Listing.css?v=1" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link href="~/ExtraFiles/assets/css/headerGuest.css" rel="stylesheet" />
+    <link href="~/ExtraFiles/assets/css/headerGuest.css?v=1" rel="stylesheet" />
     <style>
         .hide {
             display: none;
