--- a/PPl3/Areas/User/Views/HomeUser/profile.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/profile.cshtml
@@ -62,7 +62,7 @@
                         <button class="js_menuUser_btn"><i class="fa-solid fa-bars"></i></button>
                         @{
                             int countNoti = 0;
-                            foreach (var item in db.user_notification.Where(tmp => tmp.userid == p_user.id && tmp.un_status == 1).ToList())
+                            foreach (var item in db.user_notification.Where(tmp => tmp.userid == p_user.id && tmp.un_status == 0).ToList())
                             {
                                 countNoti++;
                             }
@@ -74,17 +74,27 @@
                                 {
                                     <span class="notification_badge">@countNoti</span>
                                 }
+                                else
+                                {
+
+                                    <span class="notification_badge" style="background-color:transparent"></span>
+                                }   
                             </button>
                         }
                         else
                         {
-                            <button class="js_menuUser_btn icon_style" style="background: url(https://cdn-icons-png.flaticon.com/512/552/552721.png) top center /cover no-repeat">
-                                @*<i class="fa-solid fa-user"></i>*@
-                                @if (countNoti != 0)
-                                {
-                                    <span class="notification_badge">@countNoti</span>
-                                }
-                            </button>
+                    <button class="js_menuUser_btn icon_style" style="background: url(https://cdn-icons-png.flaticon.com/512/552/552721.png) top center /cover no-repeat">
+                        @*<i class="fa-solid fa-user"></i>*@
+                        @if (countNoti != 0)
+                        {
+                            <span class="notification_badge">@countNoti</span>
+                        }
+                        else
+                        {
+
+                            <span class="notification_badge" style="background-color:transparent"></span>
+                        }
+                    </button>
                         }
                     </div>
 
